<resources>
    <string name="app_name">MuContactCraftmanApp</string>
    <string name="action_settings">Settings</string>
    <string name="tittle_offers">Offers</string>
    <string name="tittle_orders">Orders</string>
    <string name="tittle_contracts">Contracts</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="action_profile">Profile</string>
    <string name="email_hint">Email</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="password_hint">Password</string>
    <string name="loginButton">Login</string>
    <string name="signUpTextView">Register</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="name_hint">Complete name</string>
    <string name="signUpButton">Create Account</string>
    <string name="signInTextView">Already a member? Login</string>
    <string name="title_activity_main">Craftman App</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="instrument">Instrument</string>
    <string name="locationReference">Location at</string>
    <string name="title_activity_about_user">AboutUserActivity</string>
    <string name="title_activity_about_publication">AboutPublicationActivity</string>
</resources>
