<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/publicationConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/instrumentTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/instrument"
        android:textStyle="bold"
        android:textSize="48sp"
        android:textColor="@color/colorAccent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="8dp"/>

    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textSize="24sp"
        app:layout_constraintTop_toBottomOf="@id/instrumentTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="8dp"/>

    <TextView
        android:id="@+id/locationReferenceTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/locationReference"
        app:layout_constraintTop_toBottomOf="@id/descriptionTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="8dp"/>

</android.support.constraint.ConstraintLayout>