<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.mucontactcraftmanapp.activities.AboutPublicationActivity"
    tools:showIn="@layout/activity_about_publication">

    <com.androidnetworking.widget.ANImageView
        android:id="@+id/photoPublicationANImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/ic_launcher"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_margin="8dp"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/instrumentTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/instrument"
        android:textStyle="bold"
        android:textSize="28sp"
        android:textColor="@color/colorAccent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/photoPublicationANImageView"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="8dp"/>

    <TextView
        android:id="@+id/descriptionTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/description"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/instrumentTextView"
        app:layout_constraintStart_toEndOf="@id/photoPublicationANImageView"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="8dp"/>

    <TextView
        android:id="@+id/locationReferenceTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/locationReference"
        app:layout_constraintTop_toBottomOf="@id/descriptionTextView"
        app:layout_constraintStart_toEndOf="@id/photoPublicationANImageView"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="8dp"/>

    <TextView
        android:id="@+id/diplayNameTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/locationReference"
        app:layout_constraintTop_toBottomOf="@id/locationReferenceTextView"
        app:layout_constraintStart_toEndOf="@id/photoPublicationANImageView"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="8dp"/>
    <TextView
        android:id="@+id/phoneTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/locationReference"
        app:layout_constraintTop_toBottomOf="@id/diplayNameTextView"
        app:layout_constraintStart_toEndOf="@id/photoPublicationANImageView"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="8dp"/>
    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/locationReference"
        app:layout_constraintTop_toBottomOf="@id/phoneTextView"
        app:layout_constraintStart_toEndOf="@id/photoPublicationANImageView"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="8dp"/>

</android.support.constraint.ConstraintLayout>
